other/deny-default-service-account-bindings/.tests/resources.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: goodpod01
subjects:
- kind: ServiceAccount
  name: custom-service-account01
---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: goodpod02
subjects:
- kind: ServiceAccount
  name: custom-service-account02
---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: badpod01
subjects:
- kind: ServiceAccount
  name: default
---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: badpod02
subjects:
- kind: ServiceAccount
  name: default
