other/deny-default-service-account-bindings/.tests/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: sample-test
spec:
  steps:
  - name: step-01
    try:
    - script:
        content: kyverno test .
        check:  
          ($error != null): false
