other/deny-default-service-account-bindings/.tests/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: kyverno-test.yaml
policies:
- ../deny-default-service-account-bindings.yaml
resources:
- resources.yaml
results:
- kind: RoleBinding
  policy: deny-default-service-account-bindings
  resources:
  - goodpod01
  - goodpod02
  result: pass
  rule: deny-default-service-account-bindings
- kind: RoleBinding
  policy: deny-default-service-account-bindings
  resources:
  - badpod01
  - badpod02
  result: fail
  rule: deny-default-service-account-bindings
